Files: Operations and transfers
A tracking issue for improving the design of ongoing file operations in Files.
General Problems
- the popover has poor a11y and i18n as strings often get truncated
- there is a desire to see more detail about ongoing operations: what file is being transferred, changes in speed, etc.
- layout does not work well on mobile
- there is poor feedback about progress, completion and failure of operations
Related Files issues:
Progress indications/notifications:
- overall: GNOME/nautilus#838 (closed)
- completed operation isn't obvious: GNOME/nautilus#1817
- no feedback from a quick transfer: GNOME/nautilus#267 (closed)
- failure state unclear: GNOME/nautilus#1182
Detailed transfers:
- separate dialog? GNOME/nautilus#1183
- no way to see filename: GNOME/nautilus#1006
- lack of stats: GNOME/nautilus#1818 (closed)
Display issues
- lacks adaptiveness (no filed issue)
- strings get truncated in other locales and with a11y features
Edited by Sam Hewitt