progress-indicator: Display summary on the sidebar

The single pie for multiple operations has been too vague and not very
useful when dealing with multiple operations.

Implement the design produced from https://gitlab.gnome.org/Teams/Design/app-mockups/-/issues/89

Closes https://gitlab.gnome.org/GNOME/nautilus/-/issues/838